@@ -18,6 +18,27 @@ global $config;
 
 check_login ();
 
+if ($id != 0) {
+	
+	$read_permission = enterprise_hook ('crm_check_acl_other', array ($config['id_user'], $id));
+	$write_permission = enterprise_hook ('crm_check_acl_other', array ($config['id_user'], $id, true));
+	$manage_permission = enterprise_hook ('crm_check_acl_other', array ($config['id_user'], $id, false, false, true));
+
+	$enterprise = false;
+	
+	if ($read_permission !== ENTERPRISE_NOT_HOOK) {
+		$enterprise = true;
+		
+		if (!$read_permission) {
+			include ("general/noaccess.php");
+			exit;
+		}
+	} else {
+		$read_permission = true;
+		$write_permission = true;
+		$manage_permission = true;
+	}
+}
 // Delete file
 
 $deletef = get_parameter ("deletef", "");
