@@ -1,3 +1,13 @@
+2013-07-24  Vanessa Gil <vanessa.gil@artica.es>
+
+	* operation/companies/company_detail.php
+	  operation/companies/company_files.php
+	  operation/companies/company_role.php
+	  operation/contacts/contact_detail.php
+	  operation/contracts/contract_detail.php
+	  operation/invoices/invoice_detail.php
+	  operation/invoices/invoices.php: Fixed bugs.
+
 2013-07-23  Vanessa Gil <vanessa.gil@artica.es>
 
 	* operation/companies/company_detail.php: Fixed bug.
